# xed-terminal-plugin

./: .gitignore  README.md  meson.build  run.sh  uninstall.sh
build-aux/: post_install.py
data/: com.github.tudo75.xed-terminal-plugin.gschema.xml  meson.build  terminal-plugin.desktop.in  terminal-plugin.desktop.in.in
debian/: changelog  control  copyright  rules
po/: POTFILES  en.po  it.po
src/: meson.build  terminal.vala
